deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-deployment
  labels:
    app: kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuber
  template:
    metadata:
      labels:
        app: kuber
    spec:
      containers:
      - name: kuber-app
        image: kuber:latest # Assuming 'kuber' is the image name and 'latest' is the tag
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: kuber
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort # NodePort is suitable for local minikube accessau
