ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
spec:
  rules:
  - host: kuber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuber-service
            port:
              number: 3000
